fix close btn hover on mobile

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -46,12 +46,6 @@
     transition: color 0.2s ease-in-out;
 }
 
-
-.hero-error-close:hover {
-    color: #ff66cc;
-    transform: scale(1.4)
-}
-
 @keyframes fadeIn {
     from { opacity: 0; transform: scale(0.9); }
     to { opacity: 1; transform: scale(1); }
